--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ __pycache__/
 *.png
 *.txt
 *.docx
+2
+autoenc_output_clusters
+byol_output_clusters
+comparison_images
+DeepClustering
+images
+simclr_output_clusters
+simsiam_output_clusters
+*.pth
+
