--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,20 @@ venv/
 cellpose/
 data/
 __pycache__/
+output/
+plots/
+saves/
 *.jpeg
 *.jpg
 *.csv
 *.png
 *.txt
 *.npy
+*.md
 2
 autoenc_output_clusters/
 byol_output_clusters/
 comparison_images/
-DeepClustering/
 images/
 simclr_output_clusters/
 simsiam_output_clusters/
